@@ -4,21 +4,23 @@ import com.serch.server.admin.mappers.AnalysisMapper;
 import com.serch.server.admin.models.Admin;
 import com.serch.server.admin.repositories.AdminRepository;
 import com.serch.server.admin.services.responses.auth.*;
+import com.serch.server.bases.ApiResponse;
 import com.serch.server.enums.auth.AuthLevel;
 import com.serch.server.enums.auth.AuthMethod;
+import com.serch.server.exceptions.others.SerchException;
 import com.serch.server.models.auth.Session;
 import com.serch.server.models.auth.User;
 import com.serch.server.models.auth.mfa.MFAChallenge;
+import com.serch.server.repositories.auth.RefreshTokenRepository;
 import com.serch.server.repositories.auth.SessionRepository;
+import com.serch.server.utils.TimeUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,6 +28,7 @@ import java.util.stream.Collectors;
 public class CommonAuthImplementation implements CommonAuthService {
     private final AdminRepository adminRepository;
     private final SessionRepository sessionRepository;
+    private final RefreshTokenRepository refreshTokenRepository;
 
     @Override
     @Transactional
@@ -77,7 +80,7 @@ public class CommonAuthImplementation implements CommonAuthService {
             response.setMethod(String.format("%s - %s", AuthMethod.NONE, AuthMethod.NONE.getType()));
             response.setLevel(String.format("%s - %s", AuthLevel.LEVEL_0, AuthLevel.LEVEL_0.getType()));
         } else {
-            Session recent = list.get(0);
+            Session recent = list.getFirst();
             response.setMethod(String.format("%s - %s", recent.getMethod(), recent.getMethod().getType()));
             response.setLevel(String.format("%s - %s", recent.getAuthLevel(), recent.getAuthLevel().getType()));
         }
@@ -90,7 +93,8 @@ public class CommonAuthImplementation implements CommonAuthService {
             List<AccountAuthDeviceResponse> devices = new ArrayList<>();
             groups.forEach((k, v) -> {
                 v.sort(Comparator.comparing(Session::getCreatedAt).reversed());
-                Session latestSession = v.get(0);
+                Session latestSession = v.getFirst();
+
                 AccountAuthDeviceResponse device = new AccountAuthDeviceResponse();
                 device.setCount(v.size());
                 device.setName(k);
@@ -101,5 +105,39 @@ public class CommonAuthImplementation implements CommonAuthService {
             response.setDevices(devices);
         }
         return response;
+    }
+
+    @Override
+    @Transactional
+    public ApiResponse<List<AccountSessionResponse>> revokeSession(UUID sessionId) {
+        var session = sessionRepository.findById(sessionId)
+                .orElseThrow(() -> new SerchException("Invalid session id"));
+
+        if(session.getRevoked()) {
+            throw new SerchException("Session is already revoked");
+        } else {
+            session.setRevoked(true);
+            session.setUpdatedAt(TimeUtil.now());
+            sessionRepository.save(session);
+
+            return new ApiResponse<>("Session is now revoked", sessions(session.getUser()), HttpStatus.OK);
+        }
+    }
+
+    @Override
+    @Transactional
+    public ApiResponse<List<AccountSessionResponse>> revokeRefreshToken(UUID refreshTokenId) {
+        var refreshToken = refreshTokenRepository.findById(refreshTokenId)
+                .orElseThrow(() -> new SerchException("Invalid refresh token id"));
+
+        if(refreshToken.getRevoked()) {
+            throw new SerchException("Refresh Token is already revoked");
+        } else {
+            refreshToken.setRevoked(true);
+            refreshToken.setUpdatedAt(TimeUtil.now());
+            refreshTokenRepository.save(refreshToken);
+
+            return new ApiResponse<>("Refresh Token is now revoked", sessions(refreshToken.getUser()), HttpStatus.OK);
+        }
     }
 }
